--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body{
     font-family: Risque;  
+    text-align: justify;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -38,12 +39,7 @@ header h1{
 
 
 
-header h1:hover::after,header h1:hover::before {
-    content:"";
-    color:white;
-    animation: per 2s both;
-    
-}
+
 
 
 @keyframes per{
@@ -263,6 +259,12 @@ button:hover{
     }
     .imgBox {
         width: 50%;
+    }
+    header h1:hover::after,header h1:hover::before {
+        content:"";
+        color:white;
+        animation: per 2s both;
+        
     }
 }
 
